drone/server/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  namespace: devops
  labels:
    name: drone-server
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-server
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      containers:
        - name: drone-server
          image: registry.cn-shenzhen.aliyuncs.com/tq_library/drone:1
          resources:
            requests:
              memory: 512Mi
              cpu: "0.25"
            limits:
              memory: 1Gi
              cpu: "0.25"
          volumeMounts:
            - name: data
              mountPath: /var/lib/drone
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: drone-server-data
      nodeSelector:
          cicd: "true"
      tolerations: 
        - key: "operation" 
          operator: "Equal" 
          value: "cicd"
          effect: NoSchedule
      restartPolicy: Always
