drone/server/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: drone-server
  name: drone-server
  namespace: devops
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: drone-server
